# llm-fundamentals

./: .requirements.txt  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: users.csv
models/openai/function_calling/: introduction.py
models/openai/function_calling/Exercises/: database_query_agent.py
models/openai/introduction/: conversation_memory.py  simple_completion.py  system_prompts.py  temperature_experiments.py
models/openai/streaming_responces/: basic_streaming.py  interactive_story_generator.py  token_conter_and_Error_Handling.py  type_writter.py
notebooks/: day2_fundamentals.ipynb  openai_api.ipynb
projects/function_calling/databse_query/: README.md  agent.py  requirements.txt
src/: openai_client.py  runday1.py
src/config/: database_tools.py  ollama_client.py  utils.py
src/day01_first_calls/: _init_.py  conversation_memory.py  simple_completion.py  system_prompts.py  temperature_experiments.py
src/streaming_responces/: basic_streaming.py  interactive_story_generator.py  token_conter_and_Error_Handling.py  type_writter.py
